mobile overlapping cards fixed :hammer:

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -22,3 +22,9 @@
 .rounded-card {
     border-radius: 0.5rem;
 }
+
+.hide-overflow {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
